--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "element-ui",
+  "name": "element-week-date",
   "version": "2.15.14",
   "description": "A Component Library for Vue.js.",
   "main": "lib/element-ui.common.js",
@@ -116,7 +116,7 @@
     "karma-sinon-chai": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.32",
-    "karma-webpack": "^3.0.5",
+    "karma-webpack": "^4.0.2",
     "launch-editor-middleware": "^2.3.0",
     "markdown-it": "^8.4.1",
     "markdown-it-anchor": "^5.0.2",
