--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "element-week-date",
-  "version": "2.15.14",
+  "version": "2.15.14-beta.2",
   "description": "A Component Library for Vue.js.",
   "main": "lib/element-ui.common.js",
   "files": [
